Login API Integration
Swagger Def: http://localhost:4000/api-docs/#/User/post_login
