# swagger.json
@@ -29,6 +29,17 @@
             {
                 "tags": ["User"],
                 "summary": "Register a users in system",
+                "parameters": [
+                {
+                    "name": "data",
+                    "in": "body",
+                    "description": "Data of the users",
+                    "required": true,
+                    "schema":
+                    {
+                        "$ref": "#/definitions/User"
+                    }
+                }],
                 "responses":
                 {
                     "200":
@@ -37,6 +48,36 @@
                         "schema":
                         {
                             "$ref": "#/definitions/User"
+                        }
+                    }
+                }
+            }
+        },
+        "/login":
+        {
+            "post":
+            {
+                "tags": ["Patient"],
+                "summary": "Check patient is authorised to login",
+                "parameters": [
+                {
+                    "name": "data",
+                    "in": "body",
+                    "description": "User ID fo the patient",
+                    "required": true,
+                    "schema":
+                    {
+                        "$ref": "#/definitions/Patient"
+                    }
+                }],
+                "responses":
+                {
+                    "200":
+                    {
+                        "description": "OK",
+                        "schema":
+                        {
+                            "$ref": "#/definitions/LoginResponse"
                         }
                     }
                 }
@@ -56,65 +97,126 @@
                 "user_id":
                 {
                     "type": "integer",
+                    "example": "102",
+                    "uniqueItems": true
+                },
+                "username":
+                {
+                    "type": "string",
+                    "example": "testUser"
+                },
+                "password":
+                {
+                    "type": "string",
+                    "example": "testUserPwd"
+                },
+                "is_superuser":
+                {
+                    "type": "boolean",
+                    "example": 0
+                },
+                "first_name":
+                {
+                    "type": "string",
+                    "example": "First"
+                },
+                "last_name":
+                {
+                    "type": "string",
+                    "example": "Last"
+                },
+                "email":
+                {
+                    "type": "string",
+                    "example": "testUser@gmail.com"
+                },
+                "is_staff":
+                {
+                    "type": "boolean",
+                    "example": 0
+                },
+                "is_active":
+                {
+                    "type": "boolean",
+                    "example": 0
+                },
+                "date_joined":
+                {
+                    "type": "date",
+                    "pattern": "/([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/",
+                    "example": "2019-05-17"
+                },
+                "secQues1":
+                {
+                    "type": "string",
+                    "example": "Favourite Food"
+                },
+                "secAns1":
+                {
+                    "type": "string",
+                    "example": "Rice"
+                },
+                "secQues2":
+                {
+                    "type": "string",
+                    "example": "Favourite Cricketer"
+                },
+                "secAns2":
+                {
+                    "type": "string",
+                    "example": "Sachin Tendulkar"
+                },
+                "secQues3":
+                {
+                    "type": "string",
+                    "example": "Favourite Sport"
+                },
+                "secAns3":
+                {
+                    "type": "string",
+                    "example": "Hockey"
+                }
+            }
+        },
+        "Patient":
+        {
+            "required": ["user_id", "password"],
+            "properties":
+            {
+                "user_id":
+                {
+                    "type": "integer",
+                    "example": "102",
                     "uniqueItems": true
                 },
                 "password":
                 {
-                    "type": "string"
-                },
-                "is_superuser":
-                {
-                    "type": "boolean"
-                },
-                "first_name":
-                {
-                    "type": "string"
-                },
-                "last_name":
-                {
-                    "type": "string"
-                },
-                "email":
-                {
-                    "type": "string"
-                },
-                "is_staff":
-                {
-                    "type": "boolean"
-                },
-                "is_active":
-                {
-                    "type": "boolean"
-                },
-                "date_joined":
-                {
-                    "type": "string"
-                },
-                "secQues1":
-                {
-                    "type": "string"
-                },
-                "secAns1":
-                {
-                    "type": "string"
-                },
-                "secQues2":
-                {
-                    "type": "string"
-                },
-                "secAns2":
-                {
-                    "type": "string"
-                },
-                "secQues3":
-                {
-                    "type": "string"
-                },
-                "secAns3":
-                {
-                    "type": "string"
+                    "type": "string",
+                    "example": "testUserPwd"
                 }
             }
-        }      
+        },
+        "LoginResponse":
+        {
+            "properties":
+            {
+                "message":
+                {
+                    "type": "string",
+                    "example": "Patient is authenticated"
+                },
+                "isUserAuthenticated":
+                {
+                    "type": "boolean",
+                    "example": 1
+                },
+                "id":
+                {
+                    "type": "integer",
+                    "example": 102
+                }
+            }
+
+        }
     }
 }
